Write html.erb templates.

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -6,8 +6,14 @@
   </head>
   <body>
     <h1>Our Pages</h1>
-    <a href="/artists">Artists - <%= Artist.all.count %></a>
-    <a href="/songs">Songs - <%= Song.all.count %></a>
-    <a href="/genres">Genres - <%=Genre.all.count%></a>
+    <a href="/artists/index.html">
+      Artists - <%= Artist.all.count %>
+    </a>
+    <a href="/songs/index.html">
+      Songs - <%= Song.all.count %>
+    </a>
+    <a href="/genres/index.html">
+      Genres - <%=Genre.all.count%>
+    </a>
   </body>
 </html>
